# openproxy

./: .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.agents/skills/openproxy-security-review/: SKILL.md
.agents/skills/openproxy-security-review/references/: openproxy-surface.md  review-checklist.md
.agents/skills/openproxy-security-review/scripts/: run_review_checks.sh
.github/workflows/: docker-publish.yml  e2e.yml  release.yml  security.yml
.script/: run_review_checks.sh
e2e/: test.py  test_anthropic_api.py  test_anthropic_oauth.py  test_auth_selection.py  test_connect_tunnel.py  test_duplicate_extra_header_filtering.py  test_forward.py  test_h1_trailers.py  test_h2_auth_header_filtering.py  test_h2_auth_header_filtering_h2_upstream.py  test_h2_h1_fallback.py  test_h2_h1_fallback_framing.py  test_h2_large_body.py  test_h2_upstream.py  test_health_check_auth.py  test_host_path.py  test_hot_upgrade.py  test_http.py  test_https.py  test_no_auth_keys_filtering.py  test_openai_dynamic_api_key.py  test_openai_realtime.py  test_provider_priority.py  test_proxy_authorization_filtering.py  test_rewrite_auth_selection.py  test_sighup_reload.py  test_strict_http_parsing.py  test_websocket.py  websocket_echo_server.py
src/: h2client.rs  lib.rs  main.rs
src/executor/: mod.rs
src/h2client/: mod.rs
src/http/: mod.rs
src/http/reader/: mod.rs
src/provider/: mod.rs
src/websocket/: mod.rs
src/worker/: mod.rs
