[package]
name = "openproxy"
authors = ["Hei <xuboyu72@gmail.com>"]
version = "2.9.4"
edition = "2021"
description = "A LLM Proxy"

[[bin]]
name = "openproxy"
path = "src/main.rs"

[dependencies]
webpki-roots = "1.0.0"
thiserror = "2.0.12"
rustls = "0.23.25"
rustls-pki-types = "1.11.0"
crossbeam = "0.8.4"
signal-hook = "0.3.17"
serde = { version = "1.0.218", features = ["derive"] }
serde_yaml = "0.9.34"
clap = { version = "4.5.31", features = ["derive"] }
log = "0.4.26"
structured-logger = "1.0.3"
rand = "0.9.0"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26.2"
h2 = "0.4.10"
httplib = { version = "1.3.1", package = "http" }
httparse = "1.10.1"
bytes = "1.10.1"
subtle = "2.6"
socket2 = { version = "0.6.1", features = ["all"] }
